fix: 🐛 aesthetics .card-box add align-items: center;

--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -631,6 +631,10 @@
         .aesthetics {
             background-image: url('../img/homepage-work3-bg.png');
 
+            .card-box{
+                align-items: center;
+            }
+
             .content-sm{
                 @media (max-width: 992px) {
                     padding-bottom: 80px;
